calico/network-policy-namespace-b.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-b
  namespace: namespace-b
spec:
  podSelector:
    matchLabels:
      name: nginx
  policyTypes:
    - Ingress
    - Engress
  ingress:
    - from: 
      - namespaceSelector:
          matchLabels:
            name: namespace-a
  egress:
    - to:
      - namespaceSelector:
          matchExpressions:
          - key: namespace
            operator: In
            values: ["namespace-a", "namespace-c"]
